--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,18 @@
-﻿asttokens==2.4.1
-blinker==1.8.2
-certifi==2024.8.30
-cffi==1.17.1
-charset-normalizer==3.4.0
-click==8.1.7
-colorama==0.4.6
-comm==0.2.0
-debugpy==1.8.0
-decorator==5.1.1
-executing==2.0.1
-filelock==3.16.1
 Flask==3.0.3
-fsspec==2024.9.0
+transformers==4.45.1
+torch==2.4.0
+soundfile==0.12.1
+tokenizers==0.20.1
 huggingface-hub==0.25.2
-idna==3.10
-ipykernel==6.27.1
-ipython==8.18.1
-itsdangerous==2.2.0
-jedi==0.19.1
-Jinja2==3.1.4
-jupyter_client==8.6.0
-jupyter_core==5.5.0
-MarkupSafe==3.0.1
-matplotlib-inline==0.1.6
+numpy==1.24.4  # Ensure it matches your version of PyTorch
+tqdm==4.66.5
+requests==2.32.3
+safetensors==0.4.5
+urllib3==2.2.3
+fsspec==2024.9.0
+certifi==2024.8.30
+torchaudio==2.4.0
+gunicorn==20.1.0
 mkl-service==2.4.0
 mkl_fft @ file:///C:/b/abs_f55mv94vyg/croot/mkl_fft_1725370278455/work
 mkl_random @ file:///C:/b/abs_21ydbzdu8d/croot/mkl_random_1725370276095/work
